--- a/.github/workflows/wine.yml
+++ b/.github/workflows/wine.yml
@@ -38,7 +38,7 @@ jobs:
     - name: 'Install build dependencies'
       run: |
         echo "PATH=/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH" >> $GITHUB_ENV
-
+        sudo dpkg --add-architecture i386
         sudo apt update -y
         sudo apt install \
           autoconf \
@@ -73,7 +73,10 @@ jobs:
           libxkbregistry-dev \
           libxrandr-dev \
           libxrender-dev \
-          mingw-w64
+          mingw-w64 \
+          libc6-dev-i386 \
+          lib32z1-dev \
+          
 
     - name: 'Configure ccache'
       uses: hendrikmuhs/ccache-action@v1.2
