--- a/.github/workflows/wine.yml
+++ b/.github/workflows/wine.yml
@@ -105,7 +105,7 @@ jobs:
           libxi6:i386 \
           libxrandr2:i386 \
           libxslt1.1:i386 \
-          ocl-icd-libopencl1:i386 \
+          ocl-icd-libopencl1:i386
           
 
     - name: 'Configure ccache'
