--- a/.github/workflows/wine.yml
+++ b/.github/workflows/wine.yml
@@ -77,7 +77,7 @@ jobs:
           libc6-dev-i386 \
           lib32z1-dev \
           gcc-multilib \
-          libgl-dev \
+          libgl-dev:i386 \
           
 
     - name: 'Configure ccache'
